# vhskeelz-db-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/send-candidate-offers-mailing/: action.yaml
.github/actions/setup-vhskeelz-db/: action.yaml
.github/workflows/: clear_processing_record.yaml  db_update.yaml  db_update_skeelz_export.yaml  manual-mailing.yaml  scheduled-mailing-interested.yaml  scheduled-mailing-new_matches.yaml  scheduled-mailing-new_position.yaml  scheduled-mailing-num_fits.yaml  send-candidate-offers-mailings.yaml  test_download_position_candidate_cv.yaml
docs/: SALESFORCE.md
infra/: README.md  main.tf
vhskeelz_db/: cli.py  common.py  config.py  db.py  download_position_candidate_cv.py  extract_data.py  extract_data.py.selenium-deprecated  load_data.py  processing_record.py  send_candidate_offers_mailing.py  update_salesforce_data.py  update_sender_candidates_mailing_list.py  update_smoove_candidates_mailing_list.py
